deploy react app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://bh1ff.github.io/KangarooLearning",
+  "homepage": "http://bh1ff.github.io/KL",
   "name": "khaled-homepage-1",
   "version": "0.1.0",
   "private": true,
